--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <div class="wrapper main-content">
       <div id="hero">
         <div class="hero--caption">
-          <div class="hero--caption-header">[Header Text]</div>
+          <div class="hero--caption-header"><img src="./roscoe_logo.png" alt="" srcset="" width="100%" /></div>
           <div class="hero--caption-text">
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias, optio.
           </div>
